<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvoicingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InvoicingActivity"
        tools:layout_editor_absoluteX="-185dp"
        tools:layout_editor_absoluteY="-189dp">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="32dp"
            android:text="Anterior"
            app:layout_constraintBottom_toTopOf="@+id/total"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cuOnion"
            android:layout_width="134dp"
            android:layout_height="20dp"
            android:layout_marginEnd="32dp"
            android:text="C/U 2000"
            app:layout_constraintBottom_toTopOf="@+id/qtOnion"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="32dp"
            android:text="Cantidad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

        <EditText
            android:id="@+id/qtTomato"
            android:layout_width="134dp"
            android:layout_height="43dp"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/qtOnion"
            android:layout_width="134dp"
            android:layout_height="43dp"
            android:layout_marginTop="156dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qtTomato" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="32dp"
            android:text="Calcular"
            app:layout_constraintBottom_toTopOf="@+id/total"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/total"
            android:layout_width="346dp"
            android:layout_height="37dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:text="Total"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cuTomato"
            android:layout_width="134dp"
            android:layout_height="20dp"
            android:layout_marginEnd="32dp"
            android:text="C/U 1000"
            app:layout_constraintBottom_toTopOf="@+id/qtTomato"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:text="Bienvenida"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="Elemento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/tomate" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/cebolla" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>